# DiscreateMathHuffman

./: CMakeLists.txt  Entropy.cpp  Harry Potter discreate.txt  README.md  main.cpp  ~Harry Potter decode.txt  ~Harry Potter encode.txt
Decode/: CMakeLists.txt  Decode.cpp  Decode.h
Encode/: CMakeLists.txt  Encode.cpp  Encode.h
